# flowdrop

./: .gitignore  App.tsx  app.json  build_log.txt  device1_clean_test.txt  device1_mesh_log.txt  device_logs.txt  final_success_log.txt  package-lock.json  package.json  post_perms_log.txt  post_truncate_log.txt  second_device_clean_log.txt  start.js  tsconfig.json
.github/workflows/: android-build.yml
android/: build.gradle  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/gradle/wrapper/: gradle-wrapper.properties
core/: Cargo.toml
core/src/: ble.rs  crypto.rs  database.rs  discovery.rs  discovery_resolver.rs  geohash.rs  lib.rs  mesh_router.rs  nostr.rs  packet.rs  relay_pool.rs
desktop-server/: package-lock.json  package.json  server.js
desktop-server/public/: app.js  index.html  manifest.json  style.css  sw.js
ios/: Podfile
ios/MeshChatApp/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/MeshChatApp.xcodeproj/: project.pbxproj
ios/MeshChatApp.xcodeproj/xcshareddata/xcschemes/: MeshChatApp.xcscheme
patches/: react-native-ble-peripheral+2.0.1.patch  react-native-peripheral+0.0.3.patch
plugins/: withWifiP2P.js
src/: types.ts
src/components/: ChatView.js  ChatView.tsx  NetworkMap.js  NetworkMap.tsx  SettingsView.tsx
src/core/: MeshCrypto.js  MeshCrypto.ts  MeshManager.js  MeshManager.ts  MeshManager.web.ts  MeshRouter.js  MeshRouter.ts  MeshStorage.js  MeshStorage.ts  NostrManager.ts  WifiDirectManager.js  WifiDirectManager.ts  WifiDirectManager.web.ts
(+18 files in other folders)
