[package]
name = "flowdrop-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
url = "2"
tokio = { version = "1.32", features = ["rt-multi-thread", "macros", "time"] }
secp256k1 = { version = "0.27.0", features = ["rand", "global-context", "serde"] }
chacha20poly1305 = "0.10.1"
hkdf = "0.12.3"
sha2 = "0.10.8"
base64 = "0.21.4"
hex = "0.4.3"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
rand = { version = "0.8.5", features = ["getrandom", "std"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
tokio-tungstenite = { version = "0.20.1", features = ["rustls-tls-native-roots"] }
futures-util = "0.3.28"
serde_json = "1.0"
